--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,7 @@
         "format": "compressed",
         "extensionName": ".min.css",
         "savePath": "motorsimport/assets/css"
-    }]
+    }
+],
+"liveServer.settings.port": 5501
 }
